fix input align

--- a/src/app/pricing-charges/pricing-charges.component.scss
+++ b/src/app/pricing-charges/pricing-charges.component.scss
@@ -9,3 +9,6 @@ h1.big-title {
     margin-top: 20px;
     margin-bottom: 20px;
 }
+input#price {
+    padding-bottom: 10px !important;
+}
